alignment and color consistent fixes

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -345,7 +345,7 @@
 
   .matrix-img {
     width: 250px;
-    margin: 10px 0px;
+    margin: 10px auto;
     justify-content: center;
   }
 
@@ -358,7 +358,8 @@
   }
   .adobexd-img {
     width: 250px;
-    margin: 10px 0px;
+    margin: 10px auto;
+    justify-content: center;
   }
 
   .adobe-link {
