--- a/scss/main.scss
+++ b/scss/main.scss
@@ -303,7 +303,7 @@ strong {
     margin-bottom: 30px;
 
     &:hover {
-      background-color: #8ca8ed;
+      background-color: $button-hover;
       cursor: pointer;
     }
   }
@@ -347,7 +347,7 @@ strong {
 }
 
 .example-subheads {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 600;
   letter-spacing: 0.1rem;
   color: $secondary-color;
@@ -361,7 +361,7 @@ strong {
 }
 
 .section-desc {
-  margin-left: 10px;
+  //margin-left: 10px;
   line-height: 35px;
   margin-bottom: 40px;
 }
@@ -489,7 +489,7 @@ strong {
   margin: 20px auto;
 
   &:hover {
-    background-color: #8ca8ed;
+    background-color: $button-hover;
     cursor: pointer;
   }
 }
@@ -563,7 +563,7 @@ input {
 }
 
 form .submit {
-  background-color: #8ca8ed;
+  background-color: #78acff;
   border-color: transparent;
   color: #000000;
   font-size: 17px;
@@ -571,7 +571,7 @@ form .submit {
   border-radius: 5px;
 
   &:hover {
-    background-color: #7396ed;
+    background-color: $button-hover;
     cursor: pointer;
   }
 }
